flux-system/namespace-flux-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
  labels:
    app: flux
