flux-system/deployment-memcached.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: flux-system
  labels:
    app: flux
    component: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flux
      component: memcached
  template:
    metadata:
      labels:
        app: flux
        component: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.5.12-alpine
          imagePullPolicy: IfNotPresent
          args:
            - -m 128
            - -I 5m
            - -p 11211
          ports:
            - name: clients
              containerPort: 11211
              protocol: TCP
          resources:
            limits:
              memory: 160Mi
