flux-system/service-memcached.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: flux-system
  labels:
    app: flux
spec:
  ports:
    - name: memcached
      port: 11211
      protocol: TCP
  selector:
    app: flux
    component: memcached
